[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
env_logger = "0.11.8"
futures = "0.3.32"
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
kube = { version = "3.0.1", features = ["runtime", "admission", "derive"] }
log = "0.4.27"
prometheus-client = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread"] }
tower = { version = "0.5.3" } 
crd = { version = "0.1.0", path = "../../enforcer-operator/crd" }
moka = { version = "0.12.15", features = ["future"] }